chore: adjust configs

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,11 +1,11 @@
 gui:
   showIcons: true
   showBottomLine: false
-  theme:
-    selectedLineBgColor:
-      - default
-    selectedRangeBgColor:
-      - default
+  # theme:
+  #   selectedLineBgColor:
+  #     - default
+  #   selectedRangeBgColor:
+  #     - default
 git:
   paging:
     colorArg: always
@@ -26,3 +26,4 @@ keybinding:
   universal:
     confirm-alt1: null
     copyToClipboard: 'y'
+
