chore(lazygit): use default selected bg color

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,11 +1,11 @@
 gui:
   showIcons: true
   showBottomLine: false
-  # theme:
-  #   selectedLineBgColor:
-  #     - default
-  #   selectedRangeBgColor:
-  #     - default
+  theme:
+    selectedLineBgColor:
+      - default
+    selectedRangeBgColor:
+      - default
 git:
   paging:
     colorArg: always
