--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ background_blur     30
 
 #: --- Fonts ---
 # font_family         Hack Nerd Font Mono
-font_family         Maple Mono
+font_family         Maple Mono NF
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
