--- a/zed/settings.json
+++ b/zed/settings.json
@@ -10,14 +10,14 @@
   "telemetry": {
     "metrics": true
   },
-  "theme": "Carbonfox",
+  "theme": "Catppuccin Latte",
   "buffer_font_size": 13.5,
   "buffer_line_height": { "custom": 1.4 },
-  "buffer_font_family": "Maple Mono",
+  "buffer_font_family": "Maple Mono NF",
   "ui_font_size": 15,
   "active_pane_magnification": 1.61803398875,
   "terminal": {
-    "font_family": "Hack Nerd Font",
+    "font_family": "Maple Mono NF",
     "font_size": 12
   },
   "relative_line_numbers": true,
