--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,31 +1,27 @@
 gui:
-  nerdFontsVersion: '3'
-  showBottomLine: false
-  showListFooter: false
-  theme:
-    selectedLineBgColor:
-      - '#393939'
-  border: 'hidden'
+    nerdFontsVersion: '3'
+    showBottomLine: false
+    showListFooter: false
+    theme:
+        selectedLineBgColor:
+            - '#393939'
+    border: 'hidden'
 git:
-  paging:
-    colorArg: always
-    useConfig: true
-  log:
-    showGraph: always
-    showWholeGraph: true
-  # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --relative-date --pretty=medium {{branchName}} --"
-  # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%n%C(reset)%C(dim cyan)%an <%ae>%n%C(reset)%C(white)%w(0,4,4)%B%C(reset)' {{branchName}} --"
-  # allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim cyan)- %an%C(reset)%C(bold yellow)%d%C(reset)'"
+    paging:
+        colorArg: always
+        useConfig: true
+    log:
+        showGraph: always
+        showWholeGraph: true
+        # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --relative-date --pretty=medium {{branchName}} --"
+        # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%n%C(reset)%C(dim cyan)%an <%ae>%n%C(reset)%C(white)%w(0,4,4)%B%C(reset)' {{branchName}} --"
+        # allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim cyan)- %an%C(reset)%C(bold yellow)%d%C(reset)'"
 os:
-  editPreset: "nvim"
-  open: "nvim --server $NVIM --remote-send '<S-q><C-\\><C-n>:lua _OpenFile({{filename}})<CR>'"
+    editPreset: "nvim-remote"
+    open: "open -R {{filename}}"
 notARepository: 'quit'
 promptToReturnFromSubprocess: false
 keybinding:
-  universal:
-    confirm-alt1: null
-    copyToClipboard: 'y'
-customCommands:
-  - key: 'w'
-    command: "nvim --server $NVIM --remote-send '<S-q><C-\\><C-n>:lua _OpenDiffView(\"{{.SelectedLocalCommit.Sha}}\")<CR>'"
-    context: 'commits'
+    universal:
+        confirm-alt1: <disabled>
+        copyToClipboard: 'y'
