fix(nvim/leap): add new keybind to nav. over target or group

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -87,6 +87,8 @@ clear_all_shortcuts yes
 
 # remap CSI keymaps
 # map esc send_text all \x1b[27;u
+map shift+enter send_text all \x1b[13;2u
+map shift+space send_text all \x1b[32;2u
 # map ctrl+h send_text all \x1b[104;5u
 # map ctrl+i send_text all \x1b[105;5u
 # map ctrl+[ send_text all \x1b[91;5u
