chore(lazygit): add config to expand more on focused panel

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -6,6 +6,8 @@ gui:
         selectedLineBgColor:
             - '#393939'
     border: 'hidden'
+    expandFocusedSidePanel: true
+    expandedSidePanelWeight: 2
 git:
     paging:
         colorArg: always
