--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,11 +6,15 @@
 # set -g default-terminal "tmux-256color"
 # set -g default-terminal "xterm-kitty"
 set -g default-terminal $TERM
-# set -ga terminal-overrides ",*256col*:Tc"           # true colous support
+set -as terminal-features ",kitty*:RGB"
+set -as terminal-features ",kitty*:usstyle"
+
+set -as terminal-features ",xterm-256color*:RGB"
+set -as terminal-features ",xterm-256color*:usstyle"
+set -as terminal-overrides ",xterm*:Tc"
+
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-set -as terminal-features ',*:RGB'
-set -ag terminal-overrides ',xterm-256color:RGB'
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
