--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -16,23 +16,23 @@ gui:
     "tmwatchanan": "#D27E99" # sakuraPink
     "Watchanan Chantapakul": "#D27E99" # sakuraPink
 git:
-    paging:
-        colorArg: always
-        useConfig: true
-    log:
-        showGraph: always
-        # showWholeGraph: true
-        # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --relative-date --pretty=medium {{branchName}} --"
-        # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%n%C(reset)%C(dim cyan)%an <%ae>%n%C(reset)%C(white)%w(0,4,4)%B%C(reset)' {{branchName}} --"
-        # allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim cyan)- %an%C(reset)%C(bold yellow)%d%C(reset)'"
+  paging:
+    colorArg: always
+    useConfig: true
+  log:
+    showGraph: always
+    # showWholeGraph: true
+    # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --relative-date --pretty=medium {{branchName}} --"
+    # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%n%C(reset)%C(dim cyan)%an <%ae>%n%C(reset)%C(white)%w(0,4,4)%B%C(reset)' {{branchName}} --"
+    # allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim cyan)- %an%C(reset)%C(bold yellow)%d%C(reset)'"
 os:
-    editPreset: "nvim-remote"
-    open: "open -R {{filename}}"
-notARepository: 'quit'
+  editPreset: "nvim-remote"
+  open: "open -R {{filename}}"
+notARepository: "quit"
 promptToReturnFromSubprocess: false
 refresher:
   fetchInterval: 150
 keybinding:
-    universal:
-        confirm-alt1: <disabled>
-        copyToClipboard: 'y'
+  universal:
+    confirm-alt1: <disabled>
+    copyToClipboard: "y"
