--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,9 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 #: --- Colorscheme ---
-background_opacity  0.92
+background_opacity  0.85
 background_blur     30
+transparent_background_colors #393939
 
 #: --- Fonts ---
 # font_family         Hack Nerd Font Mono
