chore(kitty): adjust transparency bg of `CursorLine`

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@
 #: --- Colorscheme ---
 background_opacity  0.85
 background_blur     30
-transparent_background_colors #393939
+transparent_background_colors #393939@0.92
 
 #: --- Fonts ---
 # font_family         Hack Nerd Font Mono
