refactor(aerospace,sketchybar): clean up configs

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -67,7 +67,7 @@ inner.horizontal = 10
 inner.vertical = 10
 outer.left = 10
 outer.bottom = 10
-outer.top = [{ monitor."mi" = 40 }, 10]
+outer.top = [{ monitor."mi" = 40 }, { monitor."DELL" = 40 }, 10]
 outer.right = 10
 
 # 'main' binding mode declaration
@@ -113,8 +113,8 @@ ctrl-alt-shift-k = 'move up'
 ctrl-alt-shift-l = 'move right'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
-ctrl-alt-minus = 'resize smart -50'
-ctrl-alt-equal = 'resize smart +50'
+ctrl-alt-minus = 'resize smart -100'
+ctrl-alt-equal = 'resize smart +100'
 ctrl-alt-0 = 'balance-sizes'
 
 ctrl-alt-f = 'fullscreen'
@@ -195,6 +195,7 @@ equal = 'resize smart +50'
 6 = 'secondary'
 O = ['built-in', 'main', 'secondary']
 S = ['built-in', 'main', 'secondary']
+W = ['built-in', 'main', 'secondary']
 
 [[on-window-detected]]
 if.app-id = 'md.obsidian'
