--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -16,6 +16,7 @@ gui:
     "tmwatchanan": "#D27E99" # sakuraPink
     "Watchanan Chantapakul": "#D27E99" # sakuraPink
 git:
+  overrideGpg: true
   paging:
     colorArg: always
     useConfig: true
