--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -127,14 +127,9 @@ alt-3 = 'workspace 3'
 alt-4 = 'workspace 4'
 alt-5 = 'workspace 5'
 alt-6 = 'workspace 6'
-alt-7 = 'workspace 7'
-alt-8 = 'workspace 8'
-alt-9 = 'workspace 9'
-alt-b = 'workspace B'
 alt-o = 'workspace O' # Obsidian
-alt-p = 'workspace P' # Personal
+alt-p = 'workspace P' # Personal, dotfiles config (neovim and such)
 alt-s = 'workspace S' # Slack
-alt-v = 'workspace V' # dotfiles config (neovim and such)
 alt-w = 'workspace W' # Wezterm
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
@@ -144,14 +139,9 @@ alt-shift-3 = 'move-node-to-workspace 3'
 alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-5 = 'move-node-to-workspace 5'
 alt-shift-6 = 'move-node-to-workspace 6'
-alt-shift-7 = 'move-node-to-workspace 7'
-alt-shift-8 = 'move-node-to-workspace 8'
-alt-shift-9 = 'move-node-to-workspace 9'
-alt-shift-b = 'move-node-to-workspace B'
 alt-shift-o = 'move-node-to-workspace O'
 alt-shift-p = 'move-node-to-workspace P'
 alt-shift-s = 'move-node-to-workspace S'
-alt-shift-v = 'move-node-to-workspace V'
 alt-shift-w = 'move-node-to-workspace W'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#workspace-back-and-forth
