--- a/kitty/oxocarbon.conf
+++ b/kitty/oxocarbon.conf
@@ -6,45 +6,45 @@
 ## upstream: https://github.com/nyoom-engineering/oxocarbon
 
 
-background #262626
-foreground #ffffff
-selection_background #33b1ff
-selection_foreground #ffffff
+background #161616
+foreground #f2f4f8
+selection_background #393939
+selection_foreground #161616
 url_color #3ddbd9
-cursor #f2f2f2
+cursor #ffffff
 cursor_text_color #262626
 
 # Tabs
 active_tab_background #161616
-active_tab_foreground #ffffff
+active_tab_foreground #f2f4f8
 inactive_tab_background #262626
-inactive_tab_foreground #ffffff
+inactive_tab_foreground #f2f4f8
 
 # Windows
 active_border_color #ee5396
 inactive_border_color #393939
 
-color0  #262626
+color0  #161616
 color8  #525252
 
-color1  #33b1ff
-color9  #82cfff
+color1  #08bdba
+color9  #3ddbd9
 
-color2  #be95ff
-color10 #be95ff
+color2  #33b1ff
+color10 #82cfff
 
 color3  #ee5396
 color11 #ff7eb6
 
-color4  #78a9ff
-color12 #78a9ff
+color4  #42be65
+color12 #42be65
 
-color5  #ffab91
-color13 #ff6f00
+color5  #be95ff
+color13 #be95ff
 
-color6  #3ddbd9
-color14 #08bdba
+color6  #ee5396
+color14 #ff7eb6
 
-color7  #f2f2f2
+color7  #f2f4f8
 color15 #ffffff
 
