chore(kitty): update font composition for thinner text

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,6 +20,8 @@ adjust_line_height  110%
 modify_font underline_position 3
 undercurl_style thick-sparse
 
+text_composition_strategy legacy
+
 #: --- Cursor customization ---
 cursor none
 cursor_text_color background
