--- a/ghostty/config
+++ b/ghostty/config
@@ -3,6 +3,7 @@ font-family = Maple Mono NF
 font-size = 13
 # font-thicken = true
 adjust-cell-height = 10%
+alpha-blending = linear-corrected
 
 # cursor config
 mouse-hide-while-typing = true
@@ -11,7 +12,7 @@ cursor-style = block
 
 # colorscheme
 theme = oxocarbon
-background-opacity = 0.85
+background-opacity = 0.87
 background-blur-radius = 30
 bold-is-bright = true
 
@@ -20,6 +21,9 @@ macos-titlebar-style = hidden
 window-padding-balance = true
 window-padding-x = 8
 window-padding-y = 4
+
+# quick terminal config
+quick-terminal-space-behavior = remain
 
 # input config
 macos-option-as-alt = true
