--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -44,7 +44,7 @@ window_alert_on_bell no
 
 
 #: --- Window layout ----
-window_padding_width 8 10
+window_padding_width 4 8
 placement_strategy center
 # inactive_text_alpha 0.75
 
@@ -139,8 +139,8 @@ map cmd+shift+equal change_font_size all +0.5
 map cmd+minus change_font_size all -0.5
 map cmd+shift+minus change_font_size all -0.5
 
-map cmd+backspace change_font_size all 0
-map cmd+shift+backspace change_font_size all 0
+map cmd+0 change_font_size all 0
+map cmd+shift+0 change_font_size all 0
 
 #: Miscellaneous
 map ctrl+cmd+f    toggle_fullscreen
