--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -74,7 +74,7 @@ editor .
 # close_on_child_death no
 allow_remote_control yes
 listen_on unix:/tmp/mykitty
-shell_integration no-cursor
+shell_integration no-cursor no-sudo
 term xterm-kitty
 update_check_interval 0
 
