--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,9 +12,9 @@ bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
-font_size 13.0
+font_size 18.0
 
-adjust_line_height  110%
+adjust_line_height  80%
 # adjust_column_width 0
 
 modify_font underline_position 3
@@ -156,5 +156,6 @@ map ctrl+cmd+,   load_config_file
 # include tokyonight-moon.conf
 # include catppuccin-latte.conf
 # include catppuccin-mocha.conf
-include oxocarbon.conf
+# include oxocarbon.conf
+include kanagawa.conf
 # END_KITTY_THEME
