--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -72,8 +72,8 @@ inactive_tab_font_style normal
 shell .
 editor .
 # close_on_child_death no
-allow_remote_control yes
-listen_on unix:/tmp/mykitty
+allow_remote_control socket-only
+listen_on unix:/tmp/momeppkt-kitty
 shell_integration no-cursor no-sudo
 term xterm-kitty
 update_check_interval 0
