fix(lazygit): update edit commands for nushell compat.

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -19,8 +19,30 @@ git:
         # branchLogCmd: "git log --graph --color --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%n%C(reset)%C(dim cyan)%an <%ae>%n%C(reset)%C(white)%w(0,4,4)%B%C(reset)' {{branchName}} --"
         # allBranchesLogCmd: "git log --graph --all --color=always --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim cyan)- %an%C(reset)%C(bold yellow)%d%C(reset)'"
 os:
-    editPreset: "nvim-remote"
-    open: "open -R {{filename}}"
+    open: "^open -R {{filename}}"
+    editPreset: 'nvim-remote'
+    edit: >-
+        if ($env.NVIM == "") {
+            nvim -- {{filename}}
+        } else {
+            nvim --server $env.NVIM --remote-send "q"
+            nvim --server $env.NVIM --remote {{filename}}
+        }
+    editAtLine: >-
+        if ($env.NVIM == "") {
+            nvim +{{line}} -- {{filename}}
+        } else {
+            nvim --server $env.NVIM --remote-send "q"
+            nvim --server $env.NVIM --remote {{filename}}
+            nvim --server "$NVIM" --remote-send ":{{line}}<CR>"
+        }
+    openDirInEditor: >-
+        if ($env.NVIM == "") {
+            nvim -- {{dir}}
+        } else {
+            nvim --server $env.NVIM --remote-send "q"
+            nvim --server $env.NVIM --remote {{dir}}
+        }
 notARepository: 'quit'
 promptToReturnFromSubprocess: false
 keybinding:
