--- a/kitty/quick-access-terminal.conf
+++ b/kitty/quick-access-terminal.conf
@@ -1,2 +1,4 @@
-kitty_override allow_remote_control=socket-only
-kitty_override listen_on=unix:/tmp/momeppkt-kitty
+lines 20
+background_opacity 0.6
+focus_policy exclusive
+kitty_override window_padding_width 8 16
