--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -2,6 +2,7 @@ gui:
     nerdFontsVersion: '3'
     showBottomLine: false
     showListFooter: false
+    showRootItemInFileTree: false
     theme:
         selectedLineBgColor:
             - '#393939'
