feat(lazygit): enable hunk selection instead of linewise in staging view

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -3,6 +3,7 @@ gui:
     showBottomLine: false
     showListFooter: false
     showRootItemInFileTree: false
+    useHunkModeInStagingView: true
     theme:
         selectedLineBgColor:
             - '#393939'
