chore(tmux): disable tmux powerline, least usage lately

--- a/tmux/tmux.powerline.conf
+++ b/tmux/tmux.powerline.conf
@@ -4,13 +4,13 @@
 
 # Don't version-check for this core functionality -- anything too old to
 # support these options likely won't work well with powerline
-set -g status on
+set -g status off
 
 # --- automatic rename tmux window to current directory
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
 
-# set-option -g status-style bg=default
+set-option -g status-style bg=default
 #
 # set -g status-left-length 60
 # set -g status-left '#[fg=colour235,bg=colour252,bold] #S #[fg=colour244,bg=default] '
