--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -13,7 +13,7 @@ gui:
 git:
     paging:
         colorArg: always
-        useConfig: true
+        pager: delta --paging=never
     log:
         showGraph: always
         # showWholeGraph: true
